Rename entrypoint /iscc_code to /iscc
